# ROS-starter-tutorial

./: 1.ROS2 Basics.md  2.Robot_info_project.md  README.md  getting_started_with_ROS2.md
ROS2_demo_ws/install/: local_setup.sh  setup.sh
ROS2_demo_ws/install/robot_info_system/lib/robot_info_system/: robot_monitor  robot_state_publisher
ROS2_demo_ws/install/robot_info_system/share/robot_info_system/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2_demo_ws/install/robot_info_system/share/robot_info_system/config/: robot_config.yaml
ROS2_demo_ws/install/robot_info_system/share/robot_info_system/launch/: robot_system.launch.py  robot_system.py
ROS2_demo_ws/install/robot_info_system2/lib/robot_info_system2/: robot_monitor  robot_state_publisher
ROS2_demo_ws/install/robot_info_system2/share/robot_info_system2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2_demo_ws/install/robot_info_system2/share/robot_info_system2/launch/: launch.py
ROS2_demo_ws/install/robot_info_system_msg/include/robot_info_system_msg/robot_info_system_msg/msg/: robot_status.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
ROS2_demo_ws/install/robot_info_system_msg/include/robot_info_system_msg/robot_info_system_msg/msg/detail/: robot_status__functions.c  robot_status__functions.h  robot_status__rosidl_typesupport_fastrtps_c.h  robot_status__rosidl_typesupport_fastrtps_cpp.hpp  robot_status__rosidl_typesupport_introspection_c.h  robot_status__rosidl_typesupport_introspection_cpp.hpp  robot_status__struct.h  robot_status__struct.hpp  robot_status__type_support.c
ROS2_demo_ws/install/robot_info_system_msg/local/lib/python3.10/dist-packages/robot_info_system_msg/: _robot_info_system_msg_s.ep.rosidl_typesupport_c.c
ROS2_demo_ws/install/robot_info_system_msg/local/lib/python3.10/dist-packages/robot_info_system_msg-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
ROS2_demo_ws/install/robot_info_system_msg/local/lib/python3.10/dist-packages/robot_info_system_msg/msg/: _robot_status.py  _robot_status_s.c
ROS2_demo_ws/install/robot_info_system_msg/share/ament_index/resource_index/package_run_dependencies/: robot_info_system_msg
ROS2_demo_ws/install/robot_info_system_msg/share/ament_index/resource_index/parent_prefix_path/: robot_info_system_msg
ROS2_demo_ws/install/robot_info_system_msg/share/robot_info_system_msg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2_demo_ws/install/robot_info_system_msg/share/robot_info_system_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_robot_info_system_msg__rosidl_generator_cExport-noconfig.cmake  export_robot_info_system_msg__rosidl_generator_cExport.cmake  export_robot_info_system_msg__rosidl_generator_cppExport.cmake  export_robot_info_system_msg__rosidl_generator_pyExport-noconfig.cmake  export_robot_info_system_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_robot_info_system_msg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_robot_info_system_msg__rosidl_typesupport_fastrtps_cppExport.cmake  robot_info_system_msg__rosidl_typesupport_cppExport.cmake  robot_info_system_msg__rosidl_typesupport_introspection_cExport.cmake  robot_info_system_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  robot_info_system_msg__rosidl_typesupport_introspection_cppExport.cmake
ROS2_demo_ws/install/robot_info_system_msg/share/robot_info_system_msg/msg/: RobotStatus.idl
ROS2_demo_ws/install/turtle_package/share/ament_index/resource_index/parent_prefix_path/: turtle_package
ROS2_demo_ws/install/turtle_package/share/turtle_package/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
ROS2_demo_ws/log/: latest_build  latest_test
ROS2_demo_ws/src/robot_info_system/: package.xml  setup.cfg  setup.py
ROS2_demo_ws/src/robot_info_system/config/: robot_config.yaml
ROS2_demo_ws/src/robot_info_system/launch/: robot_system.launch.py
ROS2_demo_ws/src/robot_info_system/robot_info_system/: robot_monitor.py  robot_state_publisher.py
ROS2_demo_ws/src/robot_info_system2/: package.xml  setup.cfg  setup.py
ROS2_demo_ws/src/robot_info_system2/launch/: robot_state.launch.py
ROS2_demo_ws/src/robot_info_system2/robot_info_system2/: robot_monitor.py  robot_state_publisher.py
ROS2_demo_ws/src/robot_info_system2/test/: test_node.py  test_robot_monitor.py  test_robot_monitor_component.py  test_robot_state_publisher.py
ROS2_demo_ws/src/robot_info_system_msg/: CMakeLists.txt  package.xml
ROS2_demo_ws/src/robot_info_system_msg/msg/: RobotStatus.msg
ROS2_demo_ws/src/robot_info_system_msg/src/: robot_state_publisher.cpp
ROS2_demo_ws/src/turtle_package/: CMakeLists.txt  package.xml
ROS2_demo_ws/src/turtle_package/src/: circle.py
